--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,32 @@
   <head>
   
     <meta charset="utf-8" />
-    <link rel="icon" href="#" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-    name="description"
-    content="La mia web app">
 
-    <title>Lorenzo Giralda - graphic e web designer - front end developer</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
     crossorigin="anonymous">
 
 
+      <!-- FB META TAG  --> 
+        <meta property="og:url" content='link-home-page-app'/>
+        <meta property="og:type" content="article"/>
+        <meta property="og:title" content="Il mio sito diventa Web App!"/>
+        <meta property="og:description" content="Scopri e naviga i contenuti in modo più semplice ed intuitivo"/>
+        <meta property="og:image"content="img-meta-app"/>
+
+
 <!-- GOOGLE FONT -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+<!-- COOKIE BAR -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?always=1&blocking=1"></script>
+
 
   </head>
 
